Adding Images fied and rendering them in index.html

--- a/mysite/food/templates/food/details.html
+++ b/mysite/food/templates/food/details.html
@@ -2,6 +2,6 @@
 
 {% block body %}
 
-{{item.id}} {{item.item_name}} {{item.item_desc}}
+{{item.id}} {{item.item_name}} {{item.item_desc}} ${{item.item_price}}
 
 {% endblock %}
