--- a/mysite/food/templates/food/base.html
+++ b/mysite/food/templates/food/base.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-dark bg-dark"> 
+    <nav class="navbar navbar-dark bg-dark px-2"> 
         <a href="#" class="navbar-brand">FoodApp</a>
         <div class="navbar-nav d-flex flex-row">
             <a class="nav-item nav-link me-3" href="#">Add Item</a>
