created add and update item options

--- a/mysite/food/templates/food/base.html
+++ b/mysite/food/templates/food/base.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-dark bg-dark px-2"> 
         <a href="#" class="navbar-brand">FoodApp</a>
         <div class="navbar-nav d-flex flex-row">
-            <a class="nav-item nav-link me-3" href="#">Add Item</a>
+            <a class="nav-item nav-link me-3" href="{% url 'food:create_item' %}">Add Item</a>
             <a class="nav-item nav-link me-3" href="#">Delete Item</a>
             <a class="nav-item nav-link" href="#">View Item</a>
         </div>
