--- a/mysite/food/templates/food/base.html
+++ b/mysite/food/templates/food/base.html
@@ -17,7 +17,13 @@
         <div class="navbar-nav d-flex flex-row">
             <a class="nav-item nav-link me-3" href="{% url 'food:create_item' %}">Add Item</a>
             <a class="nav-item nav-link me-3" href="#">Delete Item</a>
-            <a class="nav-item nav-link" href="#">View Item</a>
+            <a class="nav-item nav-link me-3" href="#">View Item</a>
+            {% if user.is_authenticated %}
+                <a class="nav-item nav-link me-3" href="{% url 'logout' %}">Logout</a>
+                <a class="nav-item nav-link me-3" href="{% url 'profile' %}">Profile</a>
+            {% else %}
+                <a class="nav-item nav-link me-3" href="{% url 'login' %}">Login</a>                                                                                           
+            {% endif %}
         </div>
     </nav>
 
